# shenanigans

./: .deepsource.toml  CommandChoiceMenu.py  Readme  Readme.py  SECURITY.md  Untitled Diagram.drawio  main.py  pyproject.toml  systems relations diagram  var.py
.github/workflows/: codeql-analysis.yml
utils/: CommandChoiceMenu.py  StatusWindow.py  Untitled Diagram.drawio  functions.py  var.py  weather.py
