[tool.poetry]
name = "repl_python3_psg-shenanigans"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.47.0"
PySimpleGUI27 = "^2.4.1"
influxdb = "^5.3.1"
anvil-uplink = "^0.3.40"
anvil = "^0.0.2"
comt = "^2.6.4"
PySimpleGUIWeb = "^0.39.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
